# --
# Changes of OTRS 
# Copyright (C) 2002-2003 Martin Edenhofer <martin+code@otrs.org>
# --
# $Id: CHANGES,v 1.68 2003-03-12 05:43:06 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see 
# the enclosed file COPYING for license information (GPL). If you 
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --
1.1 CVS (2003-??-??)
 - (2003/02/11) improved ticket search (merged fulltext and ticket number
    rearch)
 - (2003/03/10) added customer email notification on move, state update
    or owner update (config option for each queue). Use
    "scripts/DBUpdate-to-1.1.(mysql|postgresql).sql".
    http://lists.otrs.org/pipermail/dev/2002-June/000005.html
 - (2003/03/06) added ro/rw to group object. So the agent is able to search,
    zoom, ... in tickets but can't edit the tickets - added also new config
    option 'QueueViewAllPossibleTickets' to show the ro queues in the queue 
    (default 0 -=> not shown). 
    Use "scripts/DBUpdate-to-1.1.(mysql|postgresql).sql".
 - (2003/03/05) added sendmail backends (Kernel::System::Email::Sendmail
    and Kernel::System::Email::SMTP) - for win32 user. New config options:
    [...]
      $Self->{'SendmailModule'} = 'Kernel::System::Email::Sendmail';
      $Self->{'SendmailModule::CMD'} = '/usr/sbin/sendmail -t -i -f ';
  
      $Self->{'SendmailModule'} = 'Kernel::System::Email::SMTP';
      $Self->{'SendmailModule::Host'} = 'mail.example.com';
      $Self->{'SendmailModule::AuthUser'} = '';
      $Self->{'SendmailModule::AuthPassword'} = '';
    [...]
 - (2003/03/05) added "view all articles" config option for ticket zoom
    view (TicketZoomExpand default is 0) - new dtl templates for ticket
    zoom Kernel/Output/HTML/*/AgentZoom*.dtl (removed TicketZoom*.dtl)
    http://lists.otrs.org/pipermail/otrs/2003-January/000784.html 
 - (2003/03/03) new ticket state implementation (added ticket_state_type
    table). Use "scripts/DBUpdate-to-1.1.(mysql|postgresql).sql".