@@ -2,13 +2,16 @@
 # Changes of OTRS 
 # Copyright (C) 2002-2003 Martin Edenhofer <martin+code@otrs.org>
 # --
-# $Id: CHANGES,v 1.68 2003-03-12 05:43:06 martin Exp $
+# $Id: CHANGES,v 1.69 2003-03-13 09:48:19 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see 
 # the enclosed file COPYING for license information (GPL). If you 
 # did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
 # --
 1.1 CVS (2003-??-??)
+ - (2003/03/13) added SendNoAutoResponseRegExp config option to send no 
+    auto responses if regexp is matching. (Default is
+    '(MAILDER-DAEMON|postmaster|abuse)@.+?\..+?')
  - (2003/02/11) improved ticket search (merged fulltext and ticket number
     rearch)
  - (2003/03/10) added customer email notification on move, state update
